# Copyright (C) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("ui_appearance_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "utils/include/",
  ]
}

config("ui_appearance_service_exception_config") {
  cflags_cc = [ "-fexceptions" ]
}

ohos_shared_library("ui_appearance_service") {
  sanitize = {
    cfi = true  # Enable/disable control flow integrity detection
    cfi_cross_dso = true  # Cross-SO CFI Checks
    debug = false
  }

  sources = [
    "src/dark_mode_manager.cpp",
    "src/ui_appearance_ability.cpp",
    "src/ui_appearance_ability_stub.cpp",
    "utils/src/alarm_timer.cpp",
    "utils/src/alarm_timer_manager.cpp",
    "utils/src/setting_data_manager.cpp",
    "utils/src/setting_data_observer.cpp",
  ]

  public_configs = [ ":ui_appearance_service_config" ]

  configs = [ ":ui_appearance_service_exception_config" ]

  include_dirs = [
    "include/",
    "utils/include/",
  ]

  external_deps = [
    "ability_base:configuration",
    "ability_runtime:app_manager",
    "ability_runtime:dataobs_manager",
    "ability_runtime:wantagent_innerkits",
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "time_service:time_client",
  ]
  subsystem_name = "arkui"
  part_name = "ui_appearance"
}

ohos_shared_library("ui_appearance_client") {
  sources = [
    "src/ui_appearance_ability_client.cpp",
    "src/ui_appearance_ability_proxy.cpp",
  ]

  public_configs = [ ":ui_appearance_service_config" ]
  include_dirs = [ "include/" ]
  deps = []
  external_deps = [
    "c_utils:utils",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "arkui"
  innerapi_tags = [ "platformsdk" ]
  part_name = "ui_appearance"
}
