# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

compiler_service_root = "//arkcompiler/ets_runtime/compiler_service"
module_output_path = "ets_runtime/ets_runtime"

declare_args() {
  code_sign_enable_test = false
  if (defined(global_parts_info) &&
      defined(global_parts_info.security_code_signature) &&
      global_parts_info.security_code_signature) {
    code_sign_enable_test = true
  }
}

compiler_service_include_dirs = [
  "${compiler_service_root}/test/mock/include",
  "${compiler_service_root}/include",
  "${compiler_service_root}/interface",
]

aot_compiler_service_sources = [
  "${compiler_service_root}/interface/aot_compiler_interface_proxy.cpp",
  "${compiler_service_root}/interface/aot_compiler_interface_stub.cpp",
  "${compiler_service_root}/src/aot_compiler_client.cpp",
  "${compiler_service_root}/src/aot_compiler_error_utils.cpp",
  "${compiler_service_root}/src/aot_compiler_impl.cpp",
  "${compiler_service_root}/src/aot_compiler_load_callback.cpp",
  "${compiler_service_root}/src/aot_compiler_service.cpp",
  "${compiler_service_root}/src/power_disconnected_listener.cpp",
  "${compiler_service_root}/src/screen_status_listener.cpp",
  "${compiler_service_root}/src/thermal_mgr_listener.cpp",
  "${compiler_service_root}/test/mock/src/ecmascript/log_wrapper.cpp",
]
